--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="./assets/favicon/site.webmanifest">
 </head>
 
 <body>
@@ -90,7 +90,7 @@
             <div class="carousel-item active">
                 <div class="view">
                     <div class="full-bg-img flex-center">
-                        <h1 class="lang" key="deliver-tr">We deliver your stunning website</h1>
+                        <h1 class="text-center lang" key="deliver-tr">We deliver your stunning website</h1>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
             <div class="carousel-item">
                 <div class="view">
                     <div class="full-bg-img flex-center">
-                        <h1 class="lang" key="design-tr">Choose the elegant design</h1>
+                        <h1 class="text-center lang" key="design-tr">Choose the elegant design</h1>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
             <div class="carousel-item">
                 <div class="view">
                     <div class="full-bg-img flex-center">
-                        <h1 class="lang" key="business-tr">Let your website be successful</h1>
+                        <h1 class="text-center lang" key="business-tr">Let your website be successful</h1>
                     </div>
                 </div>
             </div>
@@ -290,34 +290,34 @@
     </section>
 
     <section id="services">
-        <h1 class="h1">Services</h1>
+        <h1 class="h1 lang" key='services-tr'>Services</h1>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <i class="fas fa-code"></i>
-                    <p class="text-center"><span>Website </span>Development</p>
+                    <p class="text-center lang" key='website-dev-tr'><span>Website </span>Development</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6">
                     <i class="fas fa-pen-fancy"></i>
-                    <p class="text-center"><span>Elegant </span>Design</p>
+                    <p class="text-center lang" key='elegant-design-tr'><span>Elegant </span>Design</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6">
                     <i class="fas fa-tachometer-alt"></i>
-                    <p class="text-center"><span>Page Speed </span>Optimisation</p>
+                    <p class="text-center lang" key='page-speed-tr'><span>Page Speed </span>Optimisation</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6">
                     <i class="fas fa-bug"></i>
-                    <p class="text-center"><span>Automation </span>Testing</p>
+                    <p class="text-center lang" key='automation-tr'><span>Automation </span>Testing</p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id='testimonials'>
-        <h1 class="h1-responsive font-weight-bold my-5">Testimonials</h1>
+        <h1 class="h1-responsive font-weight-bold my-5 lang" key='testimonials-tr'>Testimonials</h1>
         <div class="container-fluid">
             <div class="row">
                 <div class="wrapper-carousel-fix col-lg-8">
@@ -329,8 +329,7 @@
 
                             <div class="carousel-item active">
                                 <div class="testimonial">
-
-                                    <p>
+                                    <p class="lang" key='testimonial1-tr'>
                                         <i class="fas fa-quote-left"></i>&nbsp I would not hesitate to recommend Ultra
                                         Site
                                         team to anyone wanting a beautiful and stunning website. Top! &nbsp<i
@@ -342,12 +341,12 @@
                                 </div>
                             </div>
 
-
                             <div class="carousel-item">
                                 <div class="testimonial">
 
-                                    <p>
-                                        <i class="fas fa-quote-left"></i>&nbsp I work in construction for years and as
+                                    <p class='lang' key='testimonial2-tr'>
+                                        <i class="fas fa-quote-left"></i>&nbsp I work in the construction for years and
+                                        as
                                         time
                                         went on, I had to have my own website to advertise my services. I trusted the
                                         Ultra
@@ -361,7 +360,7 @@
                             <div class="carousel-item">
                                 <div class="testimonial">
 
-                                    <p>
+                                    <p class="lang" key='testimnonial3-tr'>
                                         <i class="fas fa-quote-left"></i>&nbsp Methodical, professional and reliable.
                                         Ultra
                                         Site are very easy to work with and very helpful. Would recommend them. &nbsp<i
@@ -392,7 +391,7 @@
     </section>
 
     <section id="blogs">
-        <h1 class="text-center">Blog articles</h1>
+        <h1 class="text-center lang" key='blog-article-tr'>Blog articles</h1>
 
         <div class="container">
             <div class="row">
@@ -417,14 +416,22 @@
                                 <div class="card mb-3">
                                     <div class="row no-gutters">
                                         <div class="col-md-4">
-                                            <img src="./assets/computer.jpg" class="card-img" alt="...">
+                                            <img id='blog-article-react-logo' src="./assets/react-logo.png" class="card-img" alt="...">
                                         </div>
                                         <div class="col-md-8">
                                             <div class="card-body">
-                                                <h5 class="card-title text-center">Card title</h5>
-                                                <p class="card-text">This is a wider card with supporting text below as
-                                                    a natural lead-in to additional content. This content is a little
-                                                    bit longer.</p>
+                                                <h5 class="card-title text-center">Why choose React.js for our Website
+                                                </h5>
+                                                <p class="card-text">React is a “declarative, efficient, and flexible
+                                                    JavaScript library for building user interfaces”, as defined by its
+                                                    creators. Simply put, it allows you to create a fast, simple and
+                                                    scalable frontend for web applications.
+
+                                                    A relatively young framework, ReactJS has taken the web development
+                                                    world by storm. Created initially as an internal tool by Facebook
+                                                    engineers, the framework soon went open source, which allowed it to
+                                                    further grow and become widely adopted among individual developers..
+                                                </p>
                                                 <p class="card-text"><small class="text-muted">Last updated 3 mins
                                                         ago</small></p>
                                             </div>
@@ -472,13 +479,13 @@
                 </div>
 
                 <h4 class="col-lg-8 col-md-4 ">Copyright © 2020 Ultra Site ™ <p>All Rights Reserved</p>
-                </h2>
+                    </h2>
 
-                <div class="follow-me col-lg-2 col-md-4">
-                    <h4>Follow us</h4>
-                    <a href="https://github.com/VentsislavKostadinov" target="_blank">
-                        <span class="fab fa-facebook-square" aria-hidden="true">&nbsp;&nbsp;</span></a>
-                </div>
+                    <div class="follow-me col-lg-2 col-md-4">
+                        <h4>Follow us</h4>
+                        <a href="https://github.com/VentsislavKostadinov" target="_blank">
+                            <span class="fab fa-facebook-square" aria-hidden="true">&nbsp;&nbsp;</span></a>
+                    </div>
             </div>
         </div>
     </footer>
