--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ultra Site</title>
 
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -139,8 +140,7 @@
                     <div id="dotted"></div>
                 </div>
                 <div class="col-lg-7" id="about-text">
-
-                    <div class="wow animated fadeInRight" data-wow-delay="0.8s">
+                        <div class="wow animated fadeInRight data-wow-delay="0.8s"">
                         <h1 class="lang" key="what-we-do-tr">What we do</h1>
                         <hr id="about-banner" />
                     </div>
@@ -493,7 +493,7 @@
     <script src="bootstrap/jquery-3.4.1.min.js"></script>
     <script src="bootstrap/popper.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
-    <script src="js/wow.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
     <script src="js/translation.js"></script>
     <script src="js/description.js"></script>
@@ -503,6 +503,7 @@
     <script src="js/app.js"></script>
     <script>
         // add wow.js
+        
         new WOW().init();
         // add particles
         particlesJS.load('particles-js', 'particles.json', () => {
