--- a/index.html
+++ b/index.html
@@ -219,13 +219,16 @@
                         </div>
                     </a>
                 </div>
+           
                 <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
-                    <a href="https://ventsislavkostadinov.github.io/Healthy-Food-Supplements/#/gain-muscle-mass"
-                        target="_blank"></a><img src="assets/gallery/400x300/healthy-food.jpg" alt="zoom">
-                    <div class="mask flex-center waves-effect waves-light">
-                        <p class="white-text"><i class="fas fa-link"></i>&nbsp;Healthy Food supplements</p>
-                    </div>
+                    <a href="https://ventsislavkostadinov.github.io/Healthy-Food-Supplements/#/gain-muscle-mass" target="_blank"><img
+                            src="assets/gallery/400x300/healthy-food.jpg" alt="zoom">
+                        <div class="mask flex-center waves-effect waves-light">
+                            <p class="white-text"><i class="fas fa-link"></i>&nbsp;Healthy Food supplements</p>
+                        </div>
+                    </a>
                 </div>
+
                 <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
                     <a href="https://ventsislavkostadinov.github.io/IT-Academy/#/" target="_blank"><img
                             src="assets/gallery/400x300/itacademy.jpg" alt="zoom">
